Segundo cambio pagina demo

--- a/about.html
+++ b/about.html
@@ -38,11 +38,8 @@
             </div>
             <div class="col-lg-6 text-center text-lg-right">
                 <div class="d-inline-flex align-items-center">
-                    <a class="text-white px-2" href="">
+                    <a class="text-white px-2" href="https://www.facebook.com/impexp5hsac">
                         <i class="fab fa-facebook-f"></i>
-                    </a>
-                    <a class="text-white px-2" href="">
-                        <i class="fab fa-instagram"></i>
                     </a>
                 </div>
             </div>
@@ -197,10 +194,9 @@
                     <h3 class="text-primary mb-4">Enlaces Rapido</h3>
                     <div class="d-flex flex-column justify-content-start">
                         <a class="text-white mb-2" href="/index.html"><i class="fa fa-angle-right mr-2"></i>Inicio</a>
-                        <a class="text-white mb-2" href="/about.html"><i class="fa fa-angle-right mr-2"></i>Nosotros</a>
-                        <a class="text-white mb-2" href="/service.html"><i class="fa fa-angle-right mr-2"></i>Productos</a>
-                        <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Cotización</a>
-                        <a class="text-white" href="#"><i class="fa fa-angle-right mr-2"></i>Contactanos</a>
+                            <a class="text-white mb-2" href="/about.html"><i class="fa fa-angle-right mr-2"></i>Nosotros</a>
+                            <a class="text-white mb-2" href="/service.html"><i class="fa fa-angle-right mr-2"></i>Productos</a>
+                            <a class="text-white" href="/contact.html"><i class="fa fa-angle-right mr-2"></i>Contactanos</a>
                     </div>
                 </div>
             </div>
