--- a/service.html
+++ b/service.html
@@ -38,11 +38,8 @@
             </div>
             <div class="col-lg-6 text-center text-lg-right">
                 <div class="d-inline-flex align-items-center">
-                    <a class="text-white px-2" href="">
+                    <a class="text-white px-2" href="https://www.facebook.com/impexp5hsac">
                         <i class="fab fa-facebook-f"></i>
-                    </a>
-                    <a class="text-white px-2" href="">
-                        <i class="fab fa-instagram"></i>
                     </a>
                 </div>
             </div>
@@ -77,11 +74,11 @@
     <!-- Header Start -->
     <div class="jumbotron jumbotron-fluid mb-5">
         <div class="container text-center py-5">
-            <h1 class="text-white display-3">Service</h1>
+            <h1 class="text-white display-3">Productos</h1>
             <div class="d-inline-flex align-items-center text-white">
-                <p class="m-0"><a class="text-white" href="">Home</a></p>
+                <p class="m-0"><a class="text-white" href="">Inicio</a></p>
                 <i class="fa fa-circle px-3"></i>
-                <p class="m-0">Service</p>
+                <p class="m-0">Productos</p>
             </div>
         </div>
     </div>
@@ -111,19 +108,22 @@
 </section> -->
 
     <section class="section__gallery">
-        <div class="image_gallery"><img class="img3" src="./img/guantes/guante1.jpg" alt=""></div>
-        <div class="image_gallery"><img class="img3" src="./img/guantes/guante2.jpg" alt=""></div>
-        <div class="image_gallery"><img class="img3" src="./img/guantes/guante3.jpg" alt=""></div>
-        <div class="image_gallery"><img class="img3" src="./img/guantes/guante4.jpg" alt=""></div>
-        <div class="image_gallery"><img class="img3" src="./img/guantes/guante5.jpg" alt=""></div>
-        <div class="image_gallery"><img class="img3" src="./img/guantes/guante6.jpg" alt=""></div>
-        <div class="image_gallery"><img class="img3" src="./img/guantes/guante7.jpg" alt=""></div>
-        <div class="image_gallery"><img class="img3" src="./img/guantes/guante8.jpg" alt=""></div>
-        <div class="image_gallery"><img class="img3" src="./img/guantes/guante9.jpg" alt=""></div>
-        <div class="image_gallery"><img class="img3" src="./img/guantes/guante10.jpg" alt=""></div>
-        <div class="image_gallery"><img class="img3" src="./img/guantes/guante11.jpg" alt=""></div>
-        <div class="image_gallery"><img class="img3" src="./img/guantes/guante12.jpg" alt=""></div>
-        <div class="image_gallery"><img class="img3" src="./img/guantes/guante13.jpg" alt=""></div>
+        <div class="image_gallery"><img class="img3" src="./img/guantes/guante1.png" alt=""></div>
+        <div class="image_gallery"><img class="img3" src="./img/guantes/guante2.png" alt=""></div>
+        <div class="image_gallery"><img class="img3" src="./img/guantes/guante3.png" alt=""></div>
+        <div class="image_gallery"><img class="img3" src="./img/guantes/guante4.png" alt=""></div>
+        <div class="image_gallery"><img class="img3" src="./img/lentes/lente1.png" alt=""></div>
+        <div class="image_gallery"><img class="img3" src="./img/lentes/lente2.png" alt=""></div>
+        <div class="image_gallery"><img class="img3" src="./img/lentes/lente3.png" alt=""></div>
+        <div class="image_gallery"><img class="img3" src="./img/lentes/lente4.png" alt=""></div>
+        <div class="image_gallery"><img class="img3" src="./img/botas/botas1.png" alt=""></div>
+        <div class="image_gallery"><img class="img3" src="./img/botas/botas2.png" alt=""></div>
+        <div class="image_gallery"><img class="img3" src="./img/botas/botas3.png" alt=""></div>
+        <div class="image_gallery"><img class="img3" src="./img/otros/bateria1.png" alt=""></div>
+        <div class="image_gallery"><img class="img3" src="./img/otros/cinta2.png" alt=""></div>
+        <div class="image_gallery"><img class="img3" src="./img/otros/cinta3.png" alt=""></div>
+        <div class="image_gallery"><img class="img3" src="./img/otros/tapon1.png" alt=""></div>
+        <div class="image_gallery"><img class="img3" src="./img/otros/cinta2.png" alt=""></div>
     </section>
     
     <!-- FIN DE CATALOGO -->
@@ -308,8 +308,7 @@
                             <a class="text-white mb-2" href="/index.html"><i class="fa fa-angle-right mr-2"></i>Inicio</a>
                             <a class="text-white mb-2" href="/about.html"><i class="fa fa-angle-right mr-2"></i>Nosotros</a>
                             <a class="text-white mb-2" href="/service.html"><i class="fa fa-angle-right mr-2"></i>Productos</a>
-                            <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Cotización</a>
-                            <a class="text-white" href="#"><i class="fa fa-angle-right mr-2"></i>Contactanos</a>
+                            <a class="text-white" href="/contact.html"><i class="fa fa-angle-right mr-2"></i>Contactanos</a>
                         </div>
                     </div>
                 </div>
