--- a/index.html
+++ b/index.html
@@ -38,12 +38,10 @@
             </div>
             <div class="col-lg-6 text-center text-lg-right">
                 <div class="d-inline-flex align-items-center">
-                    <a class="text-white px-2" href="">
+                    <a class="text-white px-2" href="https://www.facebook.com/impexp5hsac">
                         <i class="fab fa-facebook-f"></i>
                     </a>
-                    <a class="text-white px-2" href="">
-                        <i class="fab fa-instagram"></i>
-                    </a>
+                   
                 </div>
             </div>
         </div>
@@ -79,14 +77,14 @@
         <div class="container text-center py-5">
             <h1 class="text-primary mb-4 degradante-text">IMPEXP 5H</h1>
             <h1 class="text-white display-3 mb-5">Distribución por mayor y menor</h1>
-            <div class="mx-auto" style="width: 100%; max-width: 600px;">
+            <!-- <div class="mx-auto" style="width: 100%; max-width: 600px;">
                 <div class="input-group">
                     <input type="text" class="form-control border-light" style="padding: 30px;" placeholder="Ingresar Texto">
                     <div class="input-group-append">
                         <button class="btn btn-primary px-3">Buscar</button>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
     <!-- Header End -->
@@ -97,9 +95,9 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-5 pb-4 pb-lg-0">
-                    <img class="img-fluid w-100" src="img/about.jpg" alt="">
+                    <img class="img-fluid w-100" src="img/experiencia.png" alt="">
                     <div class="bg-primary text-dark text-center p-4">
-                        <h3 class="m-0">25+ Years Experience</h3>
+                        <h3 class="m-0">Años de experiencia</h3>
                     </div>
                 </div>
                 <div class="col-lg-7">
@@ -107,11 +105,11 @@
                     <h1 class="mb-4">Distribucion por mayor y menor</h1>
                     <p class="mb-4">Somos un grupo empresarial dedicado a la distribución al por mayor y menor de equipos de protección personal (EPP) y artículos de limpieza. Nos caracterizamos atender la necesidades de nuestros clientes ofreciendo un servicio rápido y eficaz y los productos de mayor calidad, al mejor precio del mercado.</p>
                     <div class="d-flex align-items-center pt-2">
-                        <button type="button" class="btn-play" data-toggle="modal"
+                        <!-- <button type="button" class="btn-play" data-toggle="modal"
                             data-src="https://www.youtube.com/embed/DWRcNpR6Kdc" data-target="#videoModal">
                             <span></span>
-                        </button>
-                        <h5 class="font-weight-bold m-0 ml-4">Play Video</h5>
+                        </button> -->
+                        <!-- <h5 class="font-weight-bold m-0 ml-4">Play Video</h5> -->
                     </div>
                 </div>
             </div>
@@ -262,7 +260,7 @@
                         <li><h6><i class="far fa-dot-circle text-primary mr-3"></i>Emergency Services</h6></li>
                         <li><h6><i class="far fa-dot-circle text-primary mr-3"></i>24/7 Customer Support</h6></li>
                     </ul>-->
-                    <a href="" class="btn btn-primary mt-3 py-2 px-4">Ver Productos</a>
+                    <a href="./service.html" class="btn btn-primary mt-3 py-2 px-4">Ver Productos</a>
                 </div>
             </div>
         </div>
@@ -281,68 +279,60 @@
             <div class="row">
                 <div class="col-lg-3 col-md-6">
                     <div class="team card position-relative overflow-hidden border-0 mb-5">
-                        <img class="card-img-top" src="img/team-1.jpg" alt="">
+                        <img class="card-img-top" src="/img/product/cono.jpg" alt="">
                         <div class="card-body text-center p-0">
                             <div class="team-text d-flex flex-column justify-content-center bg-secondary">
                                 <h5 class="font-weight-bold">Seguridad Vial</h5>
                                 <span>CONOS</span>
                             </div>
-                            <div class="team-social d-flex align-items-center justify-content-center bg-primary">
-                                <a class="btn btn-outline-dark btn-social mr-2" href="#"><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-outline-dark btn-social mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-outline-dark btn-social mr-2" href="#"><i class="fab fa-linkedin-in"></i></a>
-                                <a class="btn btn-outline-dark btn-social" href="#"><i class="fab fa-instagram"></i></a>
+                            <div class="team-social d-flex align-items-center justify-content-center bg-primary">                               
+                                <a class="btn btn-outline-dark btn-social mr-2" href="https://www.facebook.com/impexp5hsac"><i class="fab fa-facebook-f"></i></a>
+                                <a class="btn btn-outline-dark btn-social" href="https://drive.google.com/file/d/1-5z-AFKCNpT83fr6OlPiL_qM_SIstW57/view?fbclid=IwAR2YDe7G_MAna3gRzMMR1OYza6e690XUnQ9gfMw6QRHe7A9JGt5I-FDGO9I"><i class="fa fa-store"></i></a>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="team card position-relative overflow-hidden border-0 mb-5">
-                        <img class="card-img-top" src="img/team-2.jpg" alt="">
+                        <img class="card-img-top" src="/img/product/casco.jpg" alt="">
                         <div class="card-body text-center p-0">
                             <div class="team-text d-flex flex-column justify-content-center bg-secondary">
                                 <h5 class="font-weight-bold">Porteccion Craneana</h5>
                                 <span>CASCO MASTER</span>
                             </div>
                             <div class="team-social d-flex align-items-center justify-content-center bg-primary">
-                                <a class="btn btn-outline-dark btn-social mr-2" href="#"><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-outline-dark btn-social mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-outline-dark btn-social mr-2" href="#"><i class="fab fa-linkedin-in"></i></a>
-                                <a class="btn btn-outline-dark btn-social" href="#"><i class="fab fa-instagram"></i></a>
+                                <a class="btn btn-outline-dark btn-social mr-2" href="https://www.facebook.com/impexp5hsac"><i class="fab fa-facebook-f"></i></a>
+                                <a class="btn btn-outline-dark btn-social" href="https://drive.google.com/file/d/1-5z-AFKCNpT83fr6OlPiL_qM_SIstW57/view?fbclid=IwAR2YDe7G_MAna3gRzMMR1OYza6e690XUnQ9gfMw6QRHe7A9JGt5I-FDGO9I"><i class="fa fa-store"></i></a>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="team card position-relative overflow-hidden border-0 mb-5">
-                        <img class="card-img-top" src="img/team-3.jpg" alt="">
+                        <img class="card-img-top" src="/img/product/lentes.jpg" alt="">
                         <div class="card-body text-center p-0">
                             <div class="team-text d-flex flex-column justify-content-center bg-secondary">
                                 <h5 class="font-weight-bold">Proteccion Visual</h5>
                                 <span>LENTES</span>
                             </div>
                             <div class="team-social d-flex align-items-center justify-content-center bg-primary">
-                                <a class="btn btn-outline-dark btn-social mr-2" href="#"><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-outline-dark btn-social mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-outline-dark btn-social mr-2" href="#"><i class="fab fa-linkedin-in"></i></a>
-                                <a class="btn btn-outline-dark btn-social" href="#"><i class="fab fa-instagram"></i></a>
+                                <a class="btn btn-outline-dark btn-social mr-2" href="https://www.facebook.com/impexp5hsac"><i class="fab fa-facebook-f"></i></a>
+                                <a class="btn btn-outline-dark btn-social" href="https://drive.google.com/file/d/1-5z-AFKCNpT83fr6OlPiL_qM_SIstW57/view?fbclid=IwAR2YDe7G_MAna3gRzMMR1OYza6e690XUnQ9gfMw6QRHe7A9JGt5I-FDGO9I"><i class="fa fa-store"></i></a>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="team card position-relative overflow-hidden border-0 mb-5">
-                        <img class="card-img-top" src="img/team-4.jpg" alt="">
+                        <img class="card-img-top" src="/img/product/orejeras.jpg" alt="">
                         <div class="card-body text-center p-0">
                             <div class="team-text d-flex flex-column justify-content-center bg-secondary">
                                 <h5 class="font-weight-bold">Proteccion Auditivo</h5>
                                 <span>OREJERAS</span>
                             </div>
                             <div class="team-social d-flex align-items-center justify-content-center bg-primary">
-                                <a class="btn btn-outline-dark btn-social mr-2" href="#"><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-outline-dark btn-social mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-outline-dark btn-social mr-2" href="#"><i class="fab fa-linkedin-in"></i></a>
-                                <a class="btn btn-outline-dark btn-social" href="#"><i class="fab fa-instagram"></i></a>
+                                <a class="btn btn-outline-dark btn-social mr-2" href="https://www.facebook.com/impexp5hsac"><i class="fab fa-facebook-f"></i></a>
+                                <a class="btn btn-outline-dark btn-social" href="https://drive.google.com/file/d/1-5z-AFKCNpT83fr6OlPiL_qM_SIstW57/view?fbclid=IwAR2YDe7G_MAna3gRzMMR1OYza6e690XUnQ9gfMw6QRHe7A9JGt5I-FDGO9I"><i class="fa fa-store"></i></a>
                             </div>
                         </div>
                     </div>
@@ -498,8 +488,7 @@
                             <a class="text-white mb-2" href="/index.html"><i class="fa fa-angle-right mr-2"></i>Inicio</a>
                             <a class="text-white mb-2" href="/about.html"><i class="fa fa-angle-right mr-2"></i>Nosotros</a>
                             <a class="text-white mb-2" href="/service.html"><i class="fa fa-angle-right mr-2"></i>Productos</a>
-                            <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Cotización</a>
-                            <a class="text-white" href="#"><i class="fa fa-angle-right mr-2"></i>Contactanos</a>
+                            <a class="text-white" href="/contact.html"><i class="fa fa-angle-right mr-2"></i>Contactanos</a>
                         </div>
                     </div>
                 </div>
