Tercer cambio pagina demo

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
             <div class="row">
                 <div class="col-lg-3 col-md-6">
                     <div class="team card position-relative overflow-hidden border-0 mb-5">
-                        <img class="card-img-top" src="/img/product/cono.jpg" alt="">
+                        <img class="card-img-top" src="./img/product/cono.jpg" alt="">
                         <div class="card-body text-center p-0">
                             <div class="team-text d-flex flex-column justify-content-center bg-secondary">
                                 <h5 class="font-weight-bold">Seguridad Vial</h5>
@@ -294,7 +294,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="team card position-relative overflow-hidden border-0 mb-5">
-                        <img class="card-img-top" src="/img/product/casco.jpg" alt="">
+                        <img class="card-img-top" src="./img/product/casco.jpg" alt="">
                         <div class="card-body text-center p-0">
                             <div class="team-text d-flex flex-column justify-content-center bg-secondary">
                                 <h5 class="font-weight-bold">Porteccion Craneana</h5>
@@ -309,7 +309,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="team card position-relative overflow-hidden border-0 mb-5">
-                        <img class="card-img-top" src="/img/product/lentes.jpg" alt="">
+                        <img class="card-img-top" src="./img/product/lentes.jpg" alt="">
                         <div class="card-body text-center p-0">
                             <div class="team-text d-flex flex-column justify-content-center bg-secondary">
                                 <h5 class="font-weight-bold">Proteccion Visual</h5>
@@ -324,7 +324,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="team card position-relative overflow-hidden border-0 mb-5">
-                        <img class="card-img-top" src="/img/product/orejeras.jpg" alt="">
+                        <img class="card-img-top" src="./img/product/orejeras.jpg" alt="">
                         <div class="card-body text-center p-0">
                             <div class="team-text d-flex flex-column justify-content-center bg-secondary">
                                 <h5 class="font-weight-bold">Proteccion Auditivo</h5>
