--- a/service.html
+++ b/service.html
@@ -133,41 +133,26 @@
     <div class="container-fluid pt-5">
         <div class="container">
             <div class="text-center pb-2">
-                <h6 class="text-primary text-uppercase font-weight-bold">Our Services</h6>
-                <h1 class="mb-4">Best Logistic Services</h1>
+                <!-- <h6 class="text-primary text-uppercase font-weight-bold">Our Services</h6> -->
+                <h1 class="mb-4">Nuestros Servicios</h1>
             </div>
             <div class="row pb-3">
-                <div class="col-lg-3 col-md-6 text-center mb-5">
-                    <div class="d-flex align-items-center justify-content-center bg-primary mb-4 p-4">
-                        <i class="fa fa-2x fa-plane text-dark pr-3"></i>
-                        <h6 class="text-white font-weight-medium m-0">Air Freight</h6>
-                    </div>
-                    <p>Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet diam sea est diam</p>
-                    <a class="border-bottom text-decoration-none" href="">Read More</a>
-                </div>
-                <div class="col-lg-3 col-md-6 text-center mb-5">
-                    <div class="d-flex align-items-center justify-content-center bg-primary mb-4 p-4">
-                        <i class="fa fa-2x fa-ship text-dark pr-3"></i>
-                        <h6 class="text-white font-weight-medium m-0">Ocean Freight</h6>
-                    </div>
-                    <p>Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet diam sea est diam</p>
-                    <a class="border-bottom text-decoration-none" href="">Read More</a>
-                </div>
+                
                 <div class="col-lg-3 col-md-6 text-center mb-5">
                     <div class="d-flex align-items-center justify-content-center bg-primary mb-4 p-4">
                         <i class="fa fa-2x fa-truck text-dark pr-3"></i>
-                        <h6 class="text-white font-weight-medium m-0">Land Transport</h6>
+                        <h6 class="text-white font-weight-medium m-0">Delivery</h6>
                     </div>
-                    <p>Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet diam sea est diam</p>
-                    <a class="border-bottom text-decoration-none" href="">Read More</a>
+                    <p>Enios a todo el Perú.</p>
+                    <!-- <a class="border-bottom text-decoration-none" href="">Read More</a> -->
                 </div>
                 <div class="col-lg-3 col-md-6 text-center mb-5">
                     <div class="d-flex align-items-center justify-content-center bg-primary mb-4 p-4">
                         <i class="fa fa-2x fa-store text-dark pr-3"></i>
-                        <h6 class="text-white font-weight-medium m-0">Cargo Storage</h6>
+                        <h6 class="text-white font-weight-medium m-0">Catalogo</h6>
                     </div>
-                    <p>Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet diam sea est diam</p>
-                    <a class="border-bottom text-decoration-none" href="">Read More</a>
+                    <p>Amplia variedad de productos.</p>
+                    <a class="border-bottom text-decoration-none" href="https://drive.google.com/file/d/1-5z-AFKCNpT83fr6OlPiL_qM_SIstW57/view?fbclid=IwAR2YDe7G_MAna3gRzMMR1OYza6e690XUnQ9gfMw6QRHe7A9JGt5I-FDGO9I">Ver Catalogo</a>
                 </div>
             </div>
         </div>
@@ -176,7 +161,7 @@
 
 
     <!--  Quote Request Start -->
-    <div class="container-fluid bg-secondary my-5">
+    <!-- <div class="container-fluid bg-secondary my-5">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-7 py-5 py-lg-0">
@@ -223,12 +208,12 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Quote Request Start -->
 
 
     <!-- Testimonial Start -->
-    <div class="container-fluid py-5">
+    <!-- <div class="container-fluid py-5">
         <div class="container">
             <div class="text-center pb-2">
                 <h6 class="text-primary text-uppercase font-weight-bold">Testimonial</h6>
@@ -281,7 +266,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Testimonial End -->
 
 
