--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <a href="service.html" class="nav-item nav-link">Productos</a>
                     <a href="contact.html" class="nav-item nav-link">Contacto</a>
                 </div>
-                <a href="" class="btn btn-primary py-2 px-4 d-none d-lg-block">Cotizar</a>
+                <a href="https://walink.co/05190d" target="_blank" class="btn btn-secundary py-2 px-4 d-none d-lg-block"> <img class="btwsp" src="./img/whatsapp.svg" alt=""> Contactanos</a>
             </div>
         </nav>
     </div>
@@ -533,8 +533,12 @@
             </div>
         </div>
     </div>
+
     <!-- Footer End -->
 
+    <!-- Whatsapp plugin -->
+    
+    <a class="" href=""> <img class="btn_wsp"  src="./img/whatsapp-icon.svg" alt=""></a>
 
     <!-- Back to Top -->
     <a href="#" class="btn btn-lg btn-primary back-to-top"><i class="fa fa-angle-double-up"></i></a>
@@ -554,6 +558,7 @@
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
+
 </body>
 
 </html>
