wsp en todas las paginas

--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
 
     <!-- Whatsapp plugin -->
     
-    <a class="" href=""> <img class="btn_wsp"  src="./img/whatsapp-icon.svg" alt=""></a>
+    <a  href="https://walink.co/05190d"> <img class="btn_wsp"  src="./img/whatsapp-icon.svg" alt=""></a>
 
     <!-- Back to Top -->
     <a href="#" class="btn btn-lg btn-primary back-to-top"><i class="fa fa-angle-double-up"></i></a>
