--- a/service.html
+++ b/service.html
@@ -64,7 +64,7 @@
                     <a href="service.html" class="nav-item nav-link  active">Productos</a>
                     <a href="contact.html" class="nav-item nav-link">Contacto</a>
                 </div>
-                <a href="" class="btn btn-primary py-2 px-4 d-none d-lg-block">Cotizar</a>
+                <a href="https://walink.co/05190d" target="_blank" class="btn btn-secundary py-2 px-4 d-none d-lg-block"> <img class="btwsp" src="./img/whatsapp.svg" alt=""> Contactanos</a>
             </div>
         </nav>
     </div>
@@ -341,6 +341,9 @@
     </div>
     <!-- Footer End -->
 
+    <!-- Whatsapp plugin -->
+    
+    <a  href="https://walink.co/05190d"> <img class="btn_wsp"  src="./img/whatsapp-icon.svg" alt=""></a>
 
     <!-- Back to Top -->
     <a href="#" class="btn btn-lg btn-primary back-to-top"><i class="fa fa-angle-double-up"></i></a>
